--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>1100 JS</title>
-    <script type="text/javascript" src="lib/milcen.js"></script>
+    <script draggable="true" type="text/javascript" src="lib/milcen.js"></script>
+    <link rel="stylesheet" href="examples/css/style_test_1.css">
   </head>
   <body>
-    <script type="text/javascript" src="test.js"></script>
+    <script defer type="text/javascript" src="example/test_1.js"></script>
+    <div class="droppable">
+    </div>
+    <div class="notDroppable">
+    </div>
+    <div class="widget">
+      <p>Toto</p>
+    </div>
   </body>
 </html>
