--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>1100 JS</title>
-    <script draggable="true" type="text/javascript" src="lib/milcen.js"></script>
+    <title>MC JS</title>
+    <script type="text/javascript" src="lib/milcen.js"></script>
     <link rel="stylesheet" href="examples/css/style_test_1.css">
   </head>
   <body>
-    <script defer type="text/javascript" src="example/test_1.js"></script>
+    <script defer type="text/javascript" src="examples/test_1.js"></script>
     <div class="droppable">
     </div>
     <div class="notDroppable">
