--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <title>MC JS</title>
     <script type="text/javascript" src="lib/MC.js"></script>
     <link rel="stylesheet" href="examples/css/style_test_1.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
     <script defer type="text/javascript" src="examples/test_1.js"></script>
     <div id="widget-container">
-      <div class="widget">
+      <div class="widget" data-posX="0" data-posY="0" data-x="1" data-y="2">
         <span>Item 1</span>
       </div>
-      <div class="widget">
+      <div class="widget" data-posX="2" data-posY="2" data-x="2" data-y="1">
         <span>Item 2</span>
+      </div>
+      <div class="widget" data-posX="4" data-posY="4" data-x="6" data-y="4">
+        <span>Item 3</span>
       </div>
     </div>
   </body>
